<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch"
    android:background="@color/soft"
    tools:context="com.example.user.allmovietest.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/content_layout"
            style="@style/WMatchHWrap"
            android:orientation="horizontal">

            <include
                layout="@layout/details_text_content"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/movie_poster_details_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/two_hundred_dp"
                android:layout_margin="@dimen/five_dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                tools:src="@drawable/ic_launcher_background" />

        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:layout_below="@id/content_layout"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/overview_title"
            style="@style/TextStyleTitles"
            android:layout_below="@id/line"
            android:layout_margin="@dimen/text_margins"
            android:text="@string/overview_title" />

        <TextView
            android:id="@+id/overview_tv"
            style="@style/TextStyle"
            android:layout_below="@id/overview_title"
            android:layout_margin="@dimen/text_margins"
            android:gravity="fill_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="TextView" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:layout_below="@id/overview_tv"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/trailers_container"
            style="@style/WMatchHWrap"
            android:layout_below="@id/line1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trailer_title"
                style="@style/TextStyleTitles"
                android:layout_below="@id/trailers_container"
                android:layout_margin="@dimen/text_margins"
                android:text="@string/trailer_title"
                tools:ignore="ObsoleteLayoutParam" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_recycler"
                style="@style/WMatchHWrap"
                android:padding="@dimen/text_margins" />

            <ProgressBar
                android:id="@+id/progress_bar_trailers"
                style="@style/WMatchHWrap"
                android:visibility="visible" />

            <TextView
                android:id="@+id/no_trailer_tv"
                style="@style/TextStyle"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/text_margins"
                android:text="@string/no_trailers"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:layout_below="@id/trailers_container"
            android:background="@color/colorAccent" />

        <LinearLayout
            style="@style/WMatchHWrap"
            android:layout_below="@id/line2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/review_title"
                style="@style/TextStyleTitles"
                android:layout_margin="@dimen/text_margins"
                android:text="@string/review_title" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_recycler"
                style="@style/WMatchHWrap"
                android:padding="@dimen/ten_dp" />

            <ProgressBar
                android:id="@+id/progress_bar_reviews"
                style="@style/WMatchHWrap"
                android:visibility="visible" />

            <TextView
                android:id="@+id/no_review_tv"
                style="@style/TextStyle"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/text_margins"
                android:text="@string/no_reviews"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>